# Project-sty

./: .gitignore  CMakeLists.txt  build.bat  build_msvc.bat
src/: main.cpp
src/clock/: MasterClock.cpp  MasterClock.h
src/engine/: ChordRecognizer.cpp  MegaVoiceTranslator.cpp  MegaVoiceTranslator.h  Sequencer.cpp  Sequencer.h  StyleController.cpp  StyleController.h  TranspositionBrain.cpp  TranspositionBrain.h
src/listener/: MidiListener.cpp  MidiListener.h  MidiOutput.cpp  MidiOutput.h  WebSocketServer.cpp  WebSocketServer.h
src/reader/: SFF2Parser.cpp  SFF2Parser.h
ui/: app.js  index.html  style.css
